==> emeb/RP2040_Audio/Firmware/st7735.c <==
#include "st7735.h"
#include "RP2040.h"
#define ST7735_SC_PIN 6
#define ST7735_SD_PIN 7
#define ST7735_BL_PIN 2
#define ST7735_CS_PIN 5
#define ST7735_DC_PIN 4
#define ST7735_RS_PIN 3
#define ST7735_CS_LOW()    gpio_put(ST7735_CS_PIN,0)
#define ST7735_CS_HIGH()   gpio_put(ST7735_CS_PIN,1)
#define ST7735_DC_CMD()    gpio_put(ST7735_DC_PIN,0)
#define ST7735_DC_DATA()   gpio_put(ST7735_DC_PIN,1)
#define ST7735_RS_LOW()    gpio_put(ST7735_RS_PIN,0)
#define ST7735_RS_HIGH()   gpio_put(ST7735_RS_PIN,1)
#define ST7735_BL_LOW()    gpio_put(ST7735_BL_PIN,0)
#define ST7735_BL_HIGH()   gpio_put(ST7735_BL_PIN,1)
#define ST_CMD            0x100
#define ST_CMD_DELAY      0x200
#define ST_CMD_END        0x400
#define ST77XX_NOP        0x00
#define ST77XX_SWRESET    0x01
#define ST77XX_RDDID      0x04
#define ST77XX_RDDST      0x09
#define ST77XX_SLPIN      0x10
#define ST77XX_SLPOUT     0x11
#define ST77XX_PTLON      0x12
#define ST77XX_NORON      0x13
#define ST77XX_INVOFF     0x20
#define ST77XX_INVON      0x21
#define ST77XX_DISPOFF    0x28
#define ST77XX_DISPON     0x29
#define ST77XX_CASET      0x2A
#define ST77XX_RASET      0x2B
#define ST77XX_RAMWR      0x2C
#define ST77XX_RAMRD      0x2E
#define ST77XX_PTLAR      0x30
#define ST77XX_COLMOD     0x3A
#define ST77XX_MADCTL     0x36
#define ST77XX_MADCTL_MY  0x80
#define ST77XX_MADCTL_MX  0x40
#define ST77XX_MADCTL_MV  0x20
#define ST77XX_MADCTL_ML  0x10
#define ST77XX_MADCTL_RGB 0x08
#define ST77XX_MADCTL_MH  0x04

void ST7735_SPI_Init(void)
{
	/* set GPIO for LCD */
    gpio_set_function(ST7735_SC_PIN, GPIO_FUNC_SPI);
    gpio_set_function(ST7735_SD_PIN, GPIO_FUNC_SPI);
	gpio_init(ST7735_CS_PIN);
	gpio_set_dir(ST7735_CS_PIN, GPIO_OUT);
	gpio_put(ST7735_CS_PIN, 1);
	gpio_init(ST7735_DC_PIN);
	gpio_set_dir(ST7735_DC_PIN, GPIO_OUT);
	gpio_put(ST7735_DC_PIN, 0);
	gpio_init(ST7735_RS_PIN);
	gpio_set_dir(ST7735_RS_PIN, GPIO_OUT);
	gpio_put(ST7735_RS_PIN, 1);
	gpio_init(ST7735_BL_PIN);
	gpio_set_dir(ST7735_BL_PIN, GPIO_OUT);
	gpio_put(ST7735_BL_PIN, 0);
	
	/* init desired SPI port to 20MHz */
	spi_init(SPI_PORT, 20000000);
	
	/* set up formatting */
	spi_set_format(SPI_PORT, 8, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);
}

void ST7735_write_byte(uint16_t dat)
{
	uint8_t dat8;
	
	if((dat & ST_CMD) == ST_CMD)
		ST7735_DC_CMD();
	else
		ST7735_DC_DATA();

	ST7735_CS_LOW();

	dat8 = dat&0xff;
	spi_write_blocking(SPI_PORT, &dat8, 1);

	ST7735_CS_HIGH();
}

void ST7735_init(void)
{
	// turn off the backlight
	ST7735_BL_LOW();
	
	// init the SPI port
	ST7735_SPI_Init();
	
#if 0
	// test spi formatting
	{
		uint16_t halfword = 0x1234;
		while(1)
			spi_write_blocking(SPI_PORT, (uint8_t *)&halfword, 2);
	}
#endif
	
	// default settings
	colstart = 24;
	rowstart = 0;
	_width  = ST7735_TFTWIDTH;
	_height = ST7735_TFTHEIGHT;
	rotation = 0;

	// Reset it
	ST7735_RS_LOW();
	sleep_ms(10);
	ST7735_RS_HIGH();
	sleep_ms(10);

	// Send init command list
	uint16_t *addr = (uint16_t *)initlst, ms;
	while(*addr != ST_CMD_END)
	{
		if((*addr & ST_CMD_DELAY) != ST_CMD_DELAY)
			ST7735_write_byte(*addr++);
		else
		{
			ms = (*addr++)&0x1ff;        // strip delay time (ms)
			sleep_ms(ms);
		}
	}
	
	// rotation?
	ST7735_setRotation(0);
}

void ST7735_setAddrWindow(uint8_t x0, uint8_t y0, uint8_t x1, uint8_t y1)
{
	uint8_t tx_buf[4];
	uint16_t sum;

	ST7735_write_byte(ST77XX_CASET | ST_CMD); // Column addr set
	sum = x0+colstart;
	tx_buf[0] = sum>>8;
	tx_buf[1] = sum&0xff;
	sum = x1+colstart;
	tx_buf[2] = sum>>8;
	tx_buf[3] = sum&0xff;
	ST7735_DC_DATA();
	ST7735_CS_LOW();
	spi_write_blocking(SPI_PORT, tx_buf, 4);
	ST7735_CS_HIGH();

	ST7735_write_byte(ST77XX_RASET | ST_CMD); // Row addr set
	sum = y0+rowstart;
	tx_buf[0] = sum>>8;
	tx_buf[1] = sum&0xff;
	sum = y1+rowstart;
	tx_buf[2] = sum>>8;
	tx_buf[3] = sum&0xff;
	ST7735_DC_DATA();
	ST7735_CS_LOW();
	spi_write_blocking(SPI_PORT, tx_buf, 4);
	ST7735_CS_HIGH();

	ST7735_write_byte(ST77XX_RAMWR | ST_CMD); // write to RAM
}

void ST7735_drawPixel(int16_t x, int16_t y, uint16_t color)
{
	if((x < 0) ||(x >= _width) || (y < 0) || (y >= _height)) return;

	ST7735_setAddrWindow(x,y,x+1,y+1);

	ST7735_DC_DATA();
	ST7735_CS_LOW();
	
	spi_write_blocking(SPI_PORT, (uint8_t *)&color, 2);

	ST7735_CS_HIGH();
}

void ST7735_fillRect(int16_t x, int16_t y, int16_t w, int16_t h,
	uint16_t color)
{
	// rudimentary clipping (drawChar w/big text requires this)
	if((x >= _width) || (y >= _height)) return;
	if((x + w - 1) >= _width)  w = _width  - x;
	if((y + h - 1) >= _height) h = _height - y;

	ST7735_setAddrWindow(x, y, x+w-1, y+h-1);
	
	w*=h;
	
	/* prep tos end data */
	ST7735_DC_DATA();
	ST7735_CS_LOW();

	/* faster version keeps pipes full */
	while(w--)
		spi_write_blocking(SPI_PORT, (uint8_t *)&color, 2);

	ST7735_CS_HIGH();
}

void ST7735_bitblt(int16_t x, int16_t y, int16_t w, int16_t h, uint16_t *buf)
{
	ST7735_setAddrWindow(x, y, x+w-1, y+h-1);

	ST7735_DC_DATA();
	ST7735_CS_LOW();

	/* PIO buffer send */
	spi_write_blocking(SPI_PORT, (uint8_t *)buf, 2*w*h);

	ST7735_CS_HIGH();
}

void ST7735_setBacklight(uint8_t ena)
{
    gpio_put(ST7735_BL_PIN, ena);
}
