==> emeb/ESP32S2_Audio/Firmware/main/st7735.c <==
#include <stdio.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "driver/spi_master.h"
#include "driver/gpio.h"
#include "st7735.h"
#define LCD_HOST    SPI2_HOST
#define PIN_NUM_MISO (-1)
#define PIN_NUM_MOSI 34
#define PIN_NUM_CLK  33
#define PIN_NUM_CS   37
#define PIN_NUM_DC   36
#define PIN_NUM_RST  35
#define PIN_NUM_BCKL 38
#define PARALLEL_LINES 16

void ST7735_SPI_Init(void)
{
    esp_err_t ret;
    spi_bus_config_t buscfg={
        .miso_io_num=PIN_NUM_MISO,
        .mosi_io_num=PIN_NUM_MOSI,
        .sclk_io_num=PIN_NUM_CLK,
        .quadwp_io_num=-1,
        .quadhd_io_num=-1,
        .max_transfer_sz=80*160*2+8
    };
    spi_device_interface_config_t devcfg={
#if 1
        .clock_speed_hz=26*1000*1000,           //Clock out at 26 MHz
#else
        .clock_speed_hz=10*1000*1000,           //Clock out at 10 MHz
#endif
        .mode=0,                                //SPI mode 0
        .spics_io_num=PIN_NUM_CS,               //CS pin
        .queue_size=7,                          //We want to be able to queue 7 transactions at a time
        .pre_cb=lcd_spi_pre_transfer_callback,  //Specify pre-transfer callback to handle D/C line
    };

    //Initialize the SPI bus
    ESP_LOGI(TAG, "Initialize SPI");
    ret=spi_bus_initialize(LCD_HOST, &buscfg, SPI_DMA_CH_AUTO);
    ESP_ERROR_CHECK(ret);
    //Attach the LCD to the SPI bus
    ret=spi_bus_add_device(LCD_HOST, &devcfg, &spi);
    ESP_ERROR_CHECK(ret);

    //Initialize non-SPI GPIOs
    ESP_LOGI(TAG, "Initialize GPIO");
    gpio_set_direction(PIN_NUM_DC, GPIO_MODE_OUTPUT);
    gpio_set_direction(PIN_NUM_RST, GPIO_MODE_OUTPUT);
    gpio_set_direction(PIN_NUM_BCKL, GPIO_MODE_OUTPUT);

    //Reset the display
    ESP_LOGI(TAG, "Reset LCD");
    gpio_set_level(PIN_NUM_RST, 0);
    vTaskDelay(100 / portTICK_RATE_MS);
    gpio_set_level(PIN_NUM_RST, 1);
    vTaskDelay(100 / portTICK_RATE_MS);
}

void ST7735_write_byte(uint16_t dat)
{
	uint8_t dat8;
    esp_err_t ret;
    spi_transaction_t t = {0};
	
	dat8 = dat&0xff;
    t.length=8;                     //Command is 8 bits
    t.tx_buffer=&dat8;              //The data is the cmd itself
	if((dat & ST_CMD) == ST_CMD)
		t.user=(void*)0;        	//D/C needs to be set to 0
	else
		t.user=(void*)1;            //D/C needs to be set to 1
    ret=spi_device_polling_transmit(spi, &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.
}

void ST7735_init(void)
{
	// init the SPI port
	ST7735_SPI_Init();
	
	// default settings
	colstart = 24;
	rowstart = 0;
	_width  = ST7735_TFTWIDTH;
	_height = ST7735_TFTHEIGHT;
	rotation = 0;

	// Send init command list
	uint16_t *addr = (uint16_t *)initlst, ms;
	while(*addr != ST_CMD_END)
	{
		if((*addr & ST_CMD_DELAY) != ST_CMD_DELAY)
			ST7735_write_byte(*addr++);
		else
		{
			ms = (*addr++)&0x1ff;        // strip delay time (ms)
		vTaskDelay(ms / portTICK_RATE_MS);
		}
	}
	
	// rotation?
	ST7735_setRotation(0);
	
	// backlight off
	ST7735_setBacklight(0);
}

void ST7735_setAddrWindow(uint8_t x0, uint8_t y0, uint8_t x1, uint8_t y1)
{
    esp_err_t ret;
    spi_transaction_t t = {0};
	uint8_t tx_buf[4];
	uint16_t sum;

	ST7735_write_byte(ST77XX_CASET | ST_CMD); // Column addr set
	sum = x0+colstart;
	tx_buf[0] = sum>>8;
	tx_buf[1] = sum&0xff;
	sum = x1+colstart;
	tx_buf[2] = sum>>8;
	tx_buf[3] = sum&0xff;
    t.length=32;                    //data is 4x8 bits
    t.tx_buffer=tx_buf;             //The data is the tx_buf
	t.user=(void*)1;           		//D/C needs to be set to 1
    ret=spi_device_polling_transmit(spi, &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.

	ST7735_write_byte(ST77XX_RASET | ST_CMD); // Row addr set
	sum = y0+rowstart;
	tx_buf[0] = sum>>8;
	tx_buf[1] = sum&0xff;
	sum = y1+rowstart;
	tx_buf[2] = sum>>8;
	tx_buf[3] = sum&0xff;
    t.length=32;                    //data is 4x8 bits
    t.tx_buffer=tx_buf;             //The data is the tx_buf
	t.user=(void*)1;           		//D/C needs to be set to 1
    ret=spi_device_polling_transmit(spi, &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.

	ST7735_write_byte(ST77XX_RAMWR | ST_CMD); // write to RAM
}

void ST7735_drawPixel(int16_t x, int16_t y, uint16_t color)
{
    esp_err_t ret;
    spi_transaction_t t = {0};

	if((x < 0) ||(x >= _width) || (y < 0) || (y >= _height)) return;

	ST7735_setAddrWindow(x,y,x+1,y+1);

    t.length=16;                    //data is 2x8 bits
    t.tx_buffer=(uint8_t *)&color;  //The data is the tx_buf
	t.user=(void*)1;           		//D/C needs to be set to 1
    ret=spi_device_polling_transmit(spi, &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.
}

void ST7735_fillRect(int16_t x, int16_t y, int16_t w, int16_t h,
	uint16_t color)
{
    esp_err_t ret;
    spi_transaction_t t = {0};;
	
	// rudimentary clipping (drawChar w/big text requires this)
	if((x >= _width) || (y >= _height)) return;
	if((x + w - 1) >= _width)  w = _width  - x;
	if((y + h - 1) >= _height) h = _height - y;

	/* set up target area */
	ST7735_setAddrWindow(x, y, x+w-1, y+h-1);
	
	/* prepare source buffer */
	w*=h;
#if 0
	/* send one pixel at a time */
    t.tx_buffer=(uint8_t *)&color;  //The data is the tx_buf
	t.length=16;                    //data is 2x8 bits
	t.user=(void*)1;           		//D/C needs to be set to 1
	while(w--)
	{
		ret=spi_device_polling_transmit(spi, &t);  //Transmit!
		assert(ret==ESP_OK);            //Should have had no issues.
	}
#else
	/* send in FBSZ-pixel chunks */
#define FBSZ 32
	uint16_t fillbuff[FBSZ];
	uint8_t i, bsz;
	
	bsz = w > FBSZ ? FBSZ : w;
	for(i=0;i<bsz;i++)
		fillbuff[i] = color;
	
	/* send color to display in chunks of max 16 pixels */
	while(w)
	{
		bsz = w > FBSZ ? FBSZ : w;
		t.length=bsz*16;                    //data is 2x8 bits x pixels
		t.rxlength = 0;
		t.tx_buffer=(uint8_t *)fillbuff;  //The data is the tx_buf
		t.user=(void*)1;           		//D/C needs to be set to 1

		ret=spi_device_polling_transmit(spi, &t);  //Transmit!
		assert(ret==ESP_OK);            //Should have had no issues.
		w -= bsz;
	}
#endif
}

void ST7735_bitblt(int16_t x, int16_t y, int16_t w, int16_t h, uint16_t *buf)
{
    esp_err_t ret;
    spi_transaction_t t = {0};

	ST7735_setAddrWindow(x, y, x+w-1, y+h-1);

	/* PIO buffer send */
    t.length=16*w*h;                //data is 2x8xwxh bits
    t.tx_buffer=buf;  				//The data is the buf
	t.user=(void*)1;           		//D/C needs to be set to 1
	ret=spi_device_polling_transmit(spi, &t);  //Transmit!
	assert(ret==ESP_OK);            //Should have had no issues.
}

void ST7735_setBacklight(uint8_t ena)
{
    gpio_set_level(PIN_NUM_BCKL, ena);
}
